--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1 class="site-title">Daily Logs</h1>
         <p class="site-desc">Concise daily posts about ideas, work, and progress.</p>
       </div>
-      <nav class="nav">
-        <a class="nav-link" href="#">Home</a>
-        <a class="nav-link" href="#">Archive</a>
-        <a class="nav-link" href="#">About</a>
+      <nav class="nav" aria-label="Main navigation">
+        <a class="nav-link nav-primary" href="index.html" aria-current="page">Home</a>
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
